<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/paymentCardIcon"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:contentDescription="@string/payment_type_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_debit_card" />

    <TextView
        android:id="@+id/paymentTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debit_or_credit_card"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/paymentCardIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/paymentTypeArrow"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/payment_type_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/paymentTypeTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

</androidx.constraintlayout.widget.ConstraintLayout>